--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/CerrarOrden.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/CerrarOrden.cshtml
@@ -239,27 +239,31 @@
                         <div class="ln_solid"></div>
 
 
-                        @if (Model != null && Model.id_documento_solicitud.HasValue)
+                        @foreach (var file in Model.OT_rel_archivos.Where(x => x.tipo == Bitacoras.Util.OT_tipo_documento.SOLICITUD))
                         {
-                            <div class="form-group row">
-                                <span style="color:black"><b>DOCUMENTOS SOLICITUD</b></span>
-                            </div>
                             <div class="form-group row" id="div_document_support_info">
-                                @Html.LabelFor(model => model.id_documento_solicitud, new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2">Documento Solictud @(Model.OT_rel_archivos.Where(x => x.tipo == Bitacoras.Util.OT_tipo_documento.SOLICITUD).ToList().IndexOf(file) + 1) </label>
                                 <div class="col-md-7">
-                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.biblioteca_digital1.Nombre" readonly>
+                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="@file.biblioteca_digital.Nombre" readonly>
                                 </div>
                                 <div class="col-md-3">
-                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_documento_solicitud})" class="btn btn-success btm-sm" title="Download">
+                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = file.id_documento})" class="btn btn-success btm-sm" title="Download">
                                         <i class="fa fa-download"></i>
                                     </a>
-                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_documento_solicitud, inline=true})" class="btn btn-info btm-sm" target="_blank" title="Inline">
+                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = file.id_documento, inline=true})" class="btn btn-info btm-sm" target="_blank" title="Inline">
                                         <i class="fa-regular fa-eye"></i>
                                     </a>
                                 </div>
 
                             </div>
-                            <div class="ln_solid"></div>
+                        }
+
+                        @if (Model.OT_rel_archivos.Where(x => x.tipo == Bitacoras.Util.OT_tipo_documento.SOLICITUD).Count() == 0)
+                        {
+                            <div class="form-group row" id="div_document_support_info">
+                                <p>No hay archivos disponibles</p>
+
+                            </div>
                         }
 
 
@@ -459,16 +463,55 @@
                             </div>
 
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.id_documento_cierre, new { @class = "control-label col-md-2" })
+                                <label class="control-label col-md-2">Documento 1 (opcional) </label>
                                 <div class="col-md-6">
 
                                     <div class="input-group">
                                         <div class="custom-file">
-                                            @Html.TextBoxFor(m => m.PostedFileCierre, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
-                                            <label class="custom-file-label" for="PostedFileCierre" style="text-align:left">Seleccione un archivo...</label>
+                                            @Html.TextBoxFor(m => m.PostedFileCierre_1, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
+                                            <label class="custom-file-label" for="PostedFileCierre_1" style="text-align:left">Seleccione un archivo...</label>
                                         </div>
                                     </div>
-                                    @Html.ValidationMessageFor(m => m.PostedFileCierre, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(m => m.PostedFileCierre_1, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="control-label col-md-2">Documento 2 (opcional) </label>
+                                <div class="col-md-6">
+
+                                    <div class="input-group">
+                                        <div class="custom-file">
+                                            @Html.TextBoxFor(m => m.PostedFileCierre_2, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
+                                            <label class="custom-file-label" for="PostedFileCierre_2" style="text-align:left">Seleccione un archivo...</label>
+                                        </div>
+                                    </div>
+                                    @Html.ValidationMessageFor(m => m.PostedFileCierre_2, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="control-label col-md-2">Documento 3 (opcional) </label>
+                                <div class="col-md-6">
+
+                                    <div class="input-group">
+                                        <div class="custom-file">
+                                            @Html.TextBoxFor(m => m.PostedFileCierre_3, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
+                                            <label class="custom-file-label" for="PostedFileCierre_3" style="text-align:left">Seleccione un archivo...</label>
+                                        </div>
+                                    </div>
+                                    @Html.ValidationMessageFor(m => m.PostedFileCierre_3, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="control-label col-md-2">Documento 4 (opcional) </label>
+                                <div class="col-md-6">
+
+                                    <div class="input-group">
+                                        <div class="custom-file">
+                                            @Html.TextBoxFor(m => m.PostedFileCierre_4, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
+                                            <label class="custom-file-label" for="PostedFileCierre_4" style="text-align:left">Seleccione un archivo...</label>
+                                        </div>
+                                    </div>
+                                    @Html.ValidationMessageFor(m => m.PostedFileCierre_4, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="ln_solid"></div>
