--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoResponsable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/ListadoResponsable.cshtml
@@ -101,7 +101,7 @@
                                                         @if (ViewBag.CambioEstatus != null && ViewBag.CambioEstatus)
                                                         {
                                                             <a href="@Url.Action("CambiarEstatus", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success" title="Cambiar Estatus">
-                                                                <i class="fa fa-check-square-o" ></i>
+                                                                <i class="fa-solid fa-square-check" ></i>
                                                             </a>
                                                         }
                                                         @if (ViewBag.Cerrar != null && ViewBag.Cerrar)
