--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
@@ -136,7 +136,7 @@
                                                         @if (ViewBag.AuthorizarRechazar != null && ViewBag.AuthorizarRechazar)
                                                         {
                                                             <a href="@Url.Action("AutorizarRechazar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Authorize">
-                                                                <i class="fa fa-check-square-o"></i>
+                                                                <i class="fa-solid fa-square-check"></i>
                                                             </a>
                                                         }
                                                         @if (ViewBag.EditCredit != null && ViewBag.EditCredit)
