2022-05-30 Se agrega recuperacion de contraseña.

--- a/CódigoFuente/BitacorasProduccion/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -18,10 +18,12 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <h4> Su contrase&ntilde;a ha sido restablecida correctamente. </h4>
+                        <h4> En breve, recibir&aacute; un correo electr&oacute;nico con las instrucciones para restablecer su contraseña.</h4>
 
                         <hr />
-                       
+                        <div class="alert alert-primary" role="alert">
+                            <i class="fa-solid fa-circle-info" style="font-size:15px"></i>&nbsp; Si tiene problemas para restablecer su contraseña, por favor contacte a Sistemas.
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -34,11 +36,11 @@
 
 
 @section Scripts {
-
+    
     <script>
         $(document).ready(function () {
 
-
+           
 
         });
 
