--- a/CódigoFuente/BitacorasProduccion/Views/Account/ResetPassword.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Account/ResetPassword.cshtml
@@ -26,30 +26,38 @@
                     </div>
                     <div class="x_content">
                         <br />
-                        @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
+                        @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
                         {
                             @Html.AntiForgeryToken()
                             <h4>Ingrese una nueva contraseña.</h4>
                             <hr />
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
+                            if (!Html.ViewData.ModelState.IsValid)
+                            {
+                                <div class="alert alert-danger" role="alert">
+                                    @Html.ValidationSummary("", new { @class = "text-white" })
+                                </div>
+                            }
                             @Html.HiddenFor(model => model.Code)
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.Email, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @readonly = "readonly" })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.Password, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.ConfirmPassword, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -73,6 +81,19 @@
     </div>
 </div>
 
+@if (String.IsNullOrEmpty(Model.Code))
+{
+    <script>
+        $(document).ready(function () {
+
+        });
+
+        window.onload = function () {
+            clicMenu(1);
+        }
+
+    </script>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
